--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ body {
   color: #003049;
   font-family: "Source Sans Pro", Tahoma, Geneva, Verdana, sans-serif;
   padding: 40px;
-  background-color: #eae2b7
+  background-color: #eae2b7;
+  margin-right: 150px;
+  margin-left: 80px;
 }
 
 header,
@@ -71,6 +73,5 @@ a:hover
 
 .image-circle {
   border-radius: 50%;
-  border: 2px;
-  border-color: #003049;
+  border: 2px solid #003049;
 }
